# libgkdi

./: CMakeLists.txt  Dockerfile
.gear/: libgkdi.spec  rules
.github/workflows/: build.yml  main.yml
cmake/: FindIDL.cmake  GkdiBuildTreeSettings.cmake.in  GkdiConfig.cmake.in
examples/: CMakeLists.txt
examples/cpp_example/: CMakeLists.txt  main.cpp
include/gkdi/: gkdi.h  gkdi_client.h  ndr_gkdi.h  ndr_gkdi_c.h
src/: CMakeLists.txt  gkdi.acf  gkdi.h  gkdi.idl  gkdi_client.c  gkdi_client.h  misc.idl  security.idl
tests/: CMakeLists.txt
tests/auto/: CMakeLists.txt  gkdi_test.c
